Location page - Fixed tabs on mobile view

--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -1249,11 +1249,16 @@ body .gform_wrapper .gform_body .top_label div.ginput_container {
 
 	.tab-content {
 		display: block;
+		width: 100%;
+		float: left;
+		z-index: 10;
+		position: relative;
 		@media screen and (min-width: $tabwidth) {
 			display: none;
 		}
 		&.active {
 			display: block;
+			z-index: 5;
 		}
 	}
 
@@ -1314,8 +1319,41 @@ body .gform_wrapper .gform_body .top_label div.ginput_container {
 		opacity: 1;
 	}
 
-	.tab-title {
+	.tab-label {
 		display: block;
+		text-decoration: none;
+		font-size: 18px;
+		font-weight: normal;
+		line-height: 1.3;
+		color: $color-navy;
+		margin: 0 0;
+    	padding: 10px 15px;
+    	position: relative;
+    	border: 1px solid $color-medium-grey;
+    	z-index: 20;
+    	width: 100%;
+    	float: left;
+    	box-sizing: border-box;
+		@media screen and (min-width: $tabwidth) {
+			display: none;
+		}
+		.arrow {
+			display: inline-block;
+			position: absolute;
+			right: 18px;
+			font-size: 20px;
+			color: #CCC;
+			overflow: hidden;
+			width: 21px;
+			@include transition(all ease-out .3s);
+		}
+	}
+	.active .tab-label .arrow {
+		transform: rotate(-180deg);
+	}
+
+	.tab-title {
+		display: none;
 		font-size: 18px;
 		font-weight: normal;
 		line-height: 1.3;
@@ -1324,6 +1362,7 @@ body .gform_wrapper .gform_body .top_label div.ginput_container {
     	padding: 10px 15px;
     	position: relative;
     	border: 1px solid $color-medium-grey;
+    	z-index: 20;
 		@media screen and (min-width: $tabwidth) {
 			display: none;
 		}
@@ -1398,6 +1437,9 @@ body .gform_wrapper .gform_body .top_label div.ginput_container {
 			left: 0;
 			font-size: 13px;
 		}
+	}
+	.mapdiv {
+		overflow: hidden;
 	}
 }	
 
@@ -1992,7 +2034,7 @@ section.faqs {
 	}
 }
 
-.tab-content iframe {
+.tab-content .iframediv iframe {
 	border: none!important;
 	width: 100%;
 	height: 780px;
@@ -2045,6 +2087,20 @@ section.faqs {
 			text-decoration: none;
 			font-weight: bold;
 		}
+	}
+}
+.rformBtn {
+	display: inline-block;
+	text-decoration: none;
+	background: $color-green;
+	color: #FFF;
+	font-size: 16px;
+	font-weight: 600;
+	padding: 8px 20px;
+	border-radius: 5px;
+	&:hover {
+		color: #FFF;
+		background: #1da97f;
 	}
 }
 
